--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,20 +103,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "return arrays must be of ArrayType",
+     "ename": "ValueError",
+     "evalue": "Negative or zero arguments.",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[44], line 10\u001b[0m\n\u001b[1;32m      8\u001b[0m T \u001b[39m=\u001b[39m [\u001b[39m10\u001b[39m, \u001b[39m10\u001b[39m, \u001b[39m10\u001b[39m, \u001b[39m10\u001b[39m]\n\u001b[1;32m      9\u001b[0m alpha \u001b[39m=\u001b[39m \u001b[39m45\u001b[39m\n\u001b[0;32m---> 10\u001b[0m arr \u001b[39m=\u001b[39m \u001b[39mtuple\u001b[39m(physics\u001b[39m.\u001b[39;49msimulate_auv2_motion(T, alpha, \u001b[39m10\u001b[39;49m, \u001b[39m10\u001b[39;49m))\n\u001b[1;32m     11\u001b[0m physics\u001b[39m.\u001b[39mplot_auv2_motion(arr(\u001b[39m0\u001b[39m), arr(\u001b[39m1\u001b[39m), arr(\u001b[39m2\u001b[39m), arr(\u001b[39m3\u001b[39m), arr(\u001b[39m4\u001b[39m), arr(\u001b[39m5\u001b[39m), arr(\u001b[39m6\u001b[39m))\n",
-      "File \u001b[0;32m~/python-refresher/physics.py:214\u001b[0m, in \u001b[0;36msimulate_auv2_motion\u001b[0;34m(T, alpha, L, l, mass, inertia, dt, t_final, x0, y0, theta0)\u001b[0m\n\u001b[1;32m    210\u001b[0m a \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mzeros_like(t)\n\u001b[1;32m    212\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m (\u001b[39m1\u001b[39m, t_final):\n\u001b[1;32m    213\u001b[0m     \u001b[39m# calc a\u001b[39;00m\n\u001b[0;32m--> 214\u001b[0m     a[i] \u001b[39m=\u001b[39m a[i \u001b[39m-\u001b[39m \u001b[39m1\u001b[39m] \u001b[39m+\u001b[39m calculate_auv2_acceleration(T, alpha, theta, mass)\n\u001b[1;32m    215\u001b[0m     \u001b[39m# calc v\u001b[39;00m\n\u001b[1;32m    216\u001b[0m     v[i] \u001b[39m=\u001b[39m v[i \u001b[39m-\u001b[39m \u001b[39m1\u001b[39m] \u001b[39m+\u001b[39m a[i] \u001b[39m*\u001b[39m dt\n",
-      "File \u001b[0;32m~/python-refresher/physics.py:153\u001b[0m, in \u001b[0;36mcalculate_auv2_acceleration\u001b[0;34m(T, alpha, theta, mass)\u001b[0m\n\u001b[1;32m    151\u001b[0m rov_rot_mat \u001b[39m=\u001b[39m get_rov_rotation_matrix(alpha)\n\u001b[1;32m    152\u001b[0m rot_mat \u001b[39m=\u001b[39m get_rov_rotation_matrix(theta)\n\u001b[0;32m--> 153\u001b[0m force_matrix \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49mmatmul(rot_mat, rov_rot_mat, T)\n\u001b[1;32m    154\u001b[0m a \u001b[39m=\u001b[39m force_matrix \u001b[39m/\u001b[39m mass\n\u001b[1;32m    155\u001b[0m \u001b[39mreturn\u001b[39;00m a\n",
-      "\u001b[0;31mTypeError\u001b[0m: return arrays must be of ArrayType"
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[14], line 10\u001b[0m\n\u001b[1;32m      8\u001b[0m T \u001b[39m=\u001b[39m [\u001b[39m10\u001b[39m, \u001b[39m10\u001b[39m, \u001b[39m10\u001b[39m, \u001b[39m10\u001b[39m]\n\u001b[1;32m      9\u001b[0m alpha \u001b[39m=\u001b[39m \u001b[39m45\u001b[39m\n\u001b[0;32m---> 10\u001b[0m arr \u001b[39m=\u001b[39m \u001b[39mtuple\u001b[39m(physics\u001b[39m.\u001b[39;49msimulate_auv2_motion(T, alpha, \u001b[39m10\u001b[39;49m, \u001b[39m10\u001b[39;49m))\n\u001b[1;32m     11\u001b[0m physics\u001b[39m.\u001b[39mplot_auv2_motion(arr(\u001b[39m0\u001b[39m), arr(\u001b[39m1\u001b[39m), arr(\u001b[39m2\u001b[39m), arr(\u001b[39m3\u001b[39m), arr(\u001b[39m4\u001b[39m), arr(\u001b[39m5\u001b[39m), arr(\u001b[39m6\u001b[39m))\n",
+      "File \u001b[0;32m~/python-refresher/physics.py:206\u001b[0m, in \u001b[0;36msimulate_auv2_motion\u001b[0;34m(T, alpha, L, l, mass, inertia, dt, t_final, x0, y0, theta0)\u001b[0m\n\u001b[1;32m    181\u001b[0m \u001b[39m\u001b[39m\u001b[39m'''\u001b[39;00m\n\u001b[1;32m    182\u001b[0m \u001b[39mProblem #10\u001b[39;00m\n\u001b[1;32m    183\u001b[0m \u001b[39ma)\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    203\u001b[0m \u001b[39ma = np.ndarray of the accelerations of the AUV in m/s^2\u001b[39;00m\n\u001b[1;32m    204\u001b[0m \u001b[39m'''\u001b[39;00m\n\u001b[1;32m    205\u001b[0m \u001b[39mif\u001b[39;00m T \u001b[39mor\u001b[39;00m L \u001b[39mor\u001b[39;00m l \u001b[39mor\u001b[39;00m mass \u001b[39mor\u001b[39;00m t_final \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[0;32m--> 206\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mNegative or zero arguments.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    208\u001b[0m t \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marange(\u001b[39m0\u001b[39m, t_final, dt)\n\u001b[1;32m    210\u001b[0m x \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mzeros_like(t)\n",
+      "\u001b[0;31mValueError\u001b[0m: Negative or zero arguments."
      ]
     }
    ],
@@ -128,11 +127,7 @@
     "# plt.xlabel(\"Time (s)\")\n",
     "# plt.ylabel(\"Position (m), Velocity (m/s), Acceleration (m/s^2)\")\n",
     "# plt.legend()\n",
-    "# plt.show()\n",
-    "T = [10, 10, 10, 10]\n",
-    "alpha = 45\n",
-    "arr = tuple(physics.simulate_auv2_motion(T, alpha, 10, 10))\n",
-    "physics.plot_auv2_motion(arr(0), arr(1), arr(2), arr(3), arr(4), arr(5), arr(6))"
+    "# plt.show()"
    ]
   }
  ],
